--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,14 +1,14 @@
 ﻿/*General colors*/
-$color-grey-very-light: #e1e4ea;
+$color-grey-very-light: #d2dad4;
 $color-grey-super-light: #f4f6fc;
 $color-grey-super-ultra-light: #f9fbff;
 $color-grey-light: #9ea8bb;
 $color-grey-normal: #001c54;
-$color-blue-ultra-light: #f5f8fd;
+$color-blue-ultra-light: #ffdddd;
 $color-blue-very-light: #eaf0fd;
 $color-blue-light: #d2e0ff;
 $color-blue-mid: #ccd7f1;
-$color-blue-normal: #1b6bf8;
+$color-blue-normal: #e45757;
 $color-red-very-light: #ffe8e8;
 $color-red-light: #ffb5b5;
 $color-red-normal: #ff6868;
@@ -22,7 +22,8 @@ $color-purple-very-light: #efecff;
 $color-purple-light: #ccc2ff;
 $color-purple-normal: #705bfe;
 $color-white-very-light: #ffffff;
-$color-white-light: #f3f3f3;
+$color-white-light:#f3f3f3;
 $color-white-normal: #e4e4e4;
-$color-blue-classroomexample: #00ffee;
+$color-blue-classroomexample: #040d0c;
 $color-default: $color-grey-normal;
+
